--- a/views/product.html
+++ b/views/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>product</title>
+    <title>Productos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
@@ -28,19 +28,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./gallery.html">gallery</a>
+                            <a class="nav-link" href="./gallery.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./product.html">productos</a>
+                            <a class="nav-link active" href="./product.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./about.html">sobre nosotros</a>
+                            <a class="nav-link" href="./about.html">Sobre Nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -66,6 +66,9 @@
                                 <img src="../Img/Motherboards/imagen.png" class="card-img-top img__producto" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><strong>GIGABYTE B560 AORUS AX</strong></h5>
+                                </div>
+                                <div class="precio_container">
+                                    <h3>PRECIO 20000</h3>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
                             </div>
@@ -76,9 +79,13 @@
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
-                                <img src="../Img/Motherboards/INTEL MOTHER.png" class="card-img-top img__producto" alt="...">
+                                <img src="../Img/Motherboards/INTEL MOTHER.png" class="card-img-top img__producto"
+                                    alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><STROng>Gigabyte B560 AORUS PRO AX</STROng></h5>
+                                </div>
+                                <div class="precio_container">
+                                    <h3>PRECIO 20000</h3>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
                             </div>
@@ -89,9 +96,13 @@
                     <div class="row">
                         <div class="col-4 col-sm-1">
                             <div class="card" style="width: 18rem;">
-                                <img src="../Img/Motherboards/AMD MOTHER.jpg" class="card-img-top img__producto" alt="...">
+                                <img src="../Img/Motherboards/AMD MOTHER.jpg" class="card-img-top img__producto"
+                                    alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title"><STRong>GIGABYTE B660M AORUS PRO</STRong></h5>
+                                </div>
+                                <div class="precio_container">
+                                    <h3>PRECIO 20000</h3>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
                             </div>
@@ -108,25 +119,15 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top img__producto" alt="...">
+                                    <img src="../Img/placas de video/RTX3060.jpg" class="card-img-top img__producto"
+                                        alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>PLACA DE VIDEO NVIDIA RTX 3060TI Zotac</strong>
                                         </h5>
                                         <p class="text-center card-text">
-                                            <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="galeria_imagenes">
-                        <div class="row">
-                            <div class="col-4 col-sm-1">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top img__producto" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title"><strong>PLACA DE VIDEO RADEON RX6600XT ASUS ROG</strong>
-                                        </h5>
+                                    <div class="precio_container">
+                                        <h3>PRECIO 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
                                 </div>
@@ -137,10 +138,32 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/placas de video/RX570.jpg" class="card-img-top img__producto" alt="...">
+                                    <img src="../Img/placas de video/RX6600XT.jpg" class="card-img-top img__producto"
+                                        alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><strong>PLACA DE VIDEO RADEON RX6600XT ASUS ROG</strong>
+                                        </h5>
+                                    </div>
+                                    <div class="precio_container">
+                                        <h3>PRECIO 20000</h3>
+                                        <a href="#" class="btn btn-primary productos__menu">Comprar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria_imagenes">
+                        <div class="row">
+                            <div class="col-4 col-sm-1">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="../Img/placas de video/RX570.jpg" class="card-img-top img__producto"
+                                        alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>PLACA DE VIDEO AMD RADEON RX570 Asrock Phantom
                                                 Gaming</strong></h5>
+                                    </div>
+                                    <div class="precio_container">
+                                        <h3>PRECIO 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
                                 </div>
@@ -158,11 +181,15 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/perifericos/teclados/vata pro isometrica.png" class="card-img-top img__producto"
-                                        alt="...">
+                                    <img src="../Img/perifericos/teclados/vata pro isometrica.png"
+                                        class="card-img-top img__producto" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>TECLADO MECANICO REDRAGON VATA PRO SWITCHES
                                                 BROWN</strong> </h5>
+                                        <div></div>
+                                    </div>
+                                    <div class="precio_container">
+                                        <h3>PRECIO: 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                     </div>
                                 </div>
@@ -173,10 +200,13 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg" class="card-img-top img__producto"
-                                        alt="...">
+                                    <img src="../Img/perifericos/auriculares/cloud 2 lado.jpg"
+                                        class="card-img-top img__producto" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>AURICULARES HYPER X CLOUD 2</strong></h5>
+                                    </div>
+                                    <div class="precio_container">
+                                        <h3>PRECIO: 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                     </div>
                                 </div>
@@ -187,10 +217,13 @@
                         <div class="row">
                             <div class="col-4 col-sm-1">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg" class="card-img-top img__producto"
-                                        alt="...">
+                                    <img src="../Img/perifericos/mouse/corsair harpoon(2).jpg"
+                                        class="card-img-top img__producto" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>MOUSE GAMING CORSAIR HARPOON</strong></h5>
+                                    </div>
+                                    <div class="precio_container">
+                                        <h3>PRECIO: 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
                                 </div>
