--- a/views/about.html
+++ b/views/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <title>Sobre Nosotros</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
@@ -29,19 +29,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./gallery.html">gallery</a>
+                            <a class="nav-link" href="./gallery.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./product.html">productos</a>
+                            <a class="nav-link" href="./product.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contact.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./about.html">sobre nosotros</a>
+                            <a class="nav-link active" href="./about.html">Sobre Nosotros</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -57,7 +57,7 @@
         <h1>Acerca de nosotros</h1>
         <div>
             <section>
-                <div class="animate__animated animate__slideInRight">
+                <div class="animate__animated animate__slideInRight animate__delay-0.5s">
                     <article class="textos">
                         En mi empresa buscamos destacar por nuestro conocimiento e intentamos establecernos como la
                         opción
@@ -67,7 +67,7 @@
                         cualquier actividad que realice
                     </article>
                 </div>
-                <div class="animate__animated animate__slideInRight">
+                <div class="animate__animated animate__slideInRight animate__delay-1s" >
                     <article class="textos">
                         Nuestra Visión?
                         Convertirnos en una empresa líder en el mercado de la tecnología,
@@ -77,7 +77,7 @@
             </section>
             <h2>FAQ</h2>
             <div class="row justify-content-center">
-                <div class="col-xl-6 col-lg-12 col-md col-sm animate__animated animate__fadeInUp">
+                <div class="col-xl-6 col-lg-12 col-md col-sm animate__animated animate__fadeInUp animate__delay-2s">
                     <section class="textos">
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
