--- a/views/contact.html
+++ b/views/contact.html
@@ -74,8 +74,8 @@
                                 <input type="mail" class="form-control" placeholder="mail" aria-label="mail" required>
                             </div>
                             <div class="input-group">
-                                <textarea class="form-control" aria-label="With textarea"
-                                    required>Ingrese motivo</textarea>
+                                <textarea class="form-control" placeholder="Ingrese motivo" aria-label="With textarea"
+                                    required></textarea>
                             </div>
                             <div class="boton_contacto">
                                 <button type="submit" class="btn btn-secondary">Ingresar</button>
