--- a/styles.css
+++ b/styles.css
@@ -221,16 +221,16 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center; }
-  .productos__menu ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    width: 100vw; }
-  .productos__menu li {
-    padding: 1rem;
-    border: 1rem;
-    border-radius: 1rem;
-    text-transform: uppercase; }
+    .productos .productos__menu ul {
+      list-style-type: none;
+      padding: 0px;
+      margin: 0px;
+      width: 100vw; }
+    .productos .productos__menu li {
+      padding: 1rem;
+      border: 1rem;
+      border-radius: 1rem;
+      text-transform: uppercase; }
   /*------------------------------productos----------------------------*/
   /* ------------------------------contactos--------------------------- */
   .contactos {
@@ -252,21 +252,21 @@
     text-align: center;
     width: 100%;
     border: 3px solid gray; }
-  .footer__menu ul {
-    padding: 1rem;
-    list-style-type: none;
-    text-align: center; }
-  .footer__menu ul :hover {
-    color: blueviolet;
-    cursor: pointer;
-    transition: .5s; }
-  .footer__menu li {
-    border: 1rem;
-    border-radius: 1rem;
-    background-color: black;
-    padding-inline-start: 3rem;
-    padding-inline-end: 3rem;
-    text-transform: uppercase; }
+    .footer .footer__menu ul {
+      padding: 1rem;
+      list-style-type: none;
+      text-align: center; }
+    .footer .footer__menu ul :hover {
+      color: blueviolet;
+      cursor: pointer;
+      transition: .5s; }
+    .footer .footer__menu li {
+      border: 1rem;
+      border-radius: 1rem;
+      background-color: black;
+      padding-inline-start: 3rem;
+      padding-inline-end: 3rem;
+      text-transform: uppercase; }
   /* --------------------------footer-------------------------- */ }
 
 .btn {
