neon y partial about

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -11,11 +11,8 @@
 @import 'partials/productos';
 @import 'partials/mediaquery.scss';
 @import 'partials/buttons';
+@import 'partials/about';
 @import 'utilities/maps';
 @import 'utilities/mixins';
 @import 'utilities/normalize';
-
-
-
-
 
