--- a/SCSS/partials/_mediaquery.scss
+++ b/SCSS/partials/_mediaquery.scss
@@ -14,6 +14,8 @@
         text-align: center;
         height: 10rem;
         border: 3px solid gray;
+
+
     }
 
 
@@ -22,26 +24,27 @@
         list-style-type: none;
         text-align: center;
 
+        .header__navbar li {
+            border: 1rem;
+            border-radius: 1rem;
+            background-color: black;
+            text-transform: uppercase;
+            display: inline;
+            padding-inline-start: 3rem;
+            padding-inline-end: 3rem;
+        }
 
+        .header__navbar ul :hover {
+            color: blueviolet;
+            cursor: pointer;
+            transition: .5s;
+
+        }
     }
 
-    .header__navbar ul :hover {
-        color: blueviolet;
-        cursor: pointer;
-        transition: .5s;
-
-    }
 
 
-    .header__navbar li {
-        border: 1rem;
-        border-radius: 1rem;
-        background-color: black;
-        text-transform: uppercase;
-        display: inline;
-        padding-inline-start: 3rem;
-        padding-inline-end: 3rem;
-    }
+
 
     /*------------------------------header----------------------------*/
 
@@ -75,6 +78,32 @@
         list-style-type: none;
     }
 
+    .neon {
+        text-align: center;
+        font-size: 7em;
+        margin-bottom: 0;
+        margin-top: 0;
+        line-height: 1;
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .neon:nth-child(1) {
+        font-family: Monoton;
+        animation: neon1 1.5s ease-in-out infinite alternate;
+    }
+
+    @keyframes neon1 {
+        from {
+            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de,
+                0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+        }
+
+        to {
+            text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff00de,
+                0 0 35px #ff00de, 0 0 40px #ff00de, 0 0 50px #ff00de, 0 0 75px #ff00de;
+        }
+    }
 
     /* ------------------------------ index main ------------------------------ */
 
@@ -99,10 +128,11 @@
         }
     }
 
-
     .card {
         transition: transform 500ms ease-in-out;
-        background-image: linear-gradient(rgba(0, 0, 0, .85), rgba(0, 0, 0, .85));
+        background-image: linear-gradient(rgba(53, 14, 77, 0.85), rgba(0, 0, 0, .85));
+        text-shadow: 1px 1px 2px black;
+        color: $color_textcard;
 
         .precio_container {
             color: white;
@@ -129,34 +159,8 @@
 
     /*------------------------------galeria----------------------------*/
 
-    /*------------------------------productos----------------------------*/
-    .productos {
-        list-style-type: none;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        text-align: center;
-
-        .productos__menu ul {
-            list-style-type: none;
-            padding: 0px;
-            margin: 0px;
-            width: 100vw;
-        }
-
-        .productos__menu li {
-
-            padding: 1rem;
-            border: 1rem;
-            border-radius: 1rem;
-            text-transform: uppercase;
-        }
 
 
-    }
-
-
-
-    /*------------------------------productos----------------------------*/
     /* ------------------------------contactos--------------------------- */
     .contactos {
         display: grid;
@@ -165,14 +169,31 @@
         margin: 0 auto;
         box-sizing: border-box;
         padding-top: 5em;
-    }
 
-    .boton_contacto {
-        text-align: center;
-        padding: 2rem;
+        .boton_contacto {
+            text-align: center;
+            padding: 2rem;
+        }
     }
 
     /* ------------------------------contactos--------------------------- */
+
+
+
+    /* ------------------------------ABOUT--------------------------- */
+    .accordion-button {
+        background-image: linear-gradient(rgba(53, 14, 77, 0.85), rgba(0, 0, 0, .85));
+        text-shadow: 1px 1px 2px black;
+        color: $color_textcard;
+    }
+
+    .accordion-body {
+        background-image: linear-gradient(rgba(53, 14, 77, 0.85), rgba(0, 0, 0, .85));
+        text-shadow: 1px 1px 2px black;
+        color: $color_textcard;
+    }
+
+    /* ------------------------------ABOUT--------------------------- */
 
     /* --------------------------footer-------------------------- */
     .footer {
