neon en titulos

--- a/views/gallery.html
+++ b/views/gallery.html
@@ -52,7 +52,9 @@
         </nav>
     </header>
     <main class="fondo">
-        <h1>GALERIA</h1>
+        <div class="neon">
+            <h1>GALERIA</h1>
+        </div>
         <h2>imagenes de galeria</h2>
         <section class="justify-content-center flex-wrap d-flex align-items-center">
             <div class="galeria_imagenes">
