--- a/views/product.html
+++ b/views/product.html
@@ -52,8 +52,10 @@
         </nav>
     </header>
     <main>
-        <div class="fondo">
+        <div class="neon">
             <h1>Lista de productos</h1>
+        </div>
+        <div class="fondo">
             <marquee behavior="scroll" direction="left">*aqui puede elegir nuestros productos*</marquee>
             <div>
                 <a class="btn btn-primary productos__menu" id="Motherboards" href="">Motherboards</a>
