--- a/views/about.html
+++ b/views/about.html
@@ -54,7 +54,9 @@
     </header>
     <!-- TERMINA HEADER -->
     <main>
-        <h1>Acerca de nosotros</h1>
+        <div class="neon">
+            <h1>Acerca de nosotros</h1>
+        </div>
         <div>
             <section>
                 <div class="animate__animated animate__slideInRight animate__delay-0.5s">
@@ -75,7 +77,9 @@
                     </article>
                 </div>
             </section>
-            <h2>FAQ</h2>
+            <div class="neon">
+                <h2>FAQ</h2>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-12 col-md col-sm animate__animated animate__fadeInUp animate__delay-2s">
                     <section class="textos">
