--- a/views/contact.html
+++ b/views/contact.html
@@ -57,8 +57,10 @@
     <!-- FORMULARIO -->
     <main>
         <div class="contactos_container">
-            <div class="contactos animate__animated animate__bounceIn">
+            <div class="neon">
                 <h1>FORMULARIO DE CONTACTO</h1>
+            </div>
+            <div class="contactos animate__animated animate__bounceIn">
                 <form action="">
                     <div class="row justify-content-center">
                         <section class="col-xl-6 col-lg-8 col-md-6 col-sm-6">
