cambios al neon

--- a/views/contact.html
+++ b/views/contact.html
@@ -80,7 +80,7 @@
                                     required></textarea>
                             </div>
                             <div class="boton_contacto">
-                                <button type="submit" class="btn btn-secondary">Ingresar</button>
+                                <button type="submit" class="btn btn-secondary neon">Ingresar</button>
                             </div>
                         </section>
                     </div>
@@ -123,7 +123,7 @@
                             <a class="text-white" href="../views/about.html">about</a>
                         </p>
                         <p>
-                            <a class="text-white" href="#">boton arrepentimiento</a>
+                            <a class="text-danger" href="#">boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
