--- a/views/gallery.html
+++ b/views/gallery.html
@@ -54,8 +54,8 @@
     <main class="fondo">
         <div class="neon">
             <h1>GALERIA</h1>
+            <h2>imagenes de galeria</h2>
         </div>
-        <h2>imagenes de galeria</h2>
         <section class="justify-content-center flex-wrap d-flex align-items-center">
             <div class="galeria_imagenes">
                 <div class="row">
@@ -95,7 +95,9 @@
                 </div>
             </div>
         </section>
-        <h2>videos de galeria</h2>
+        <div class="neon">
+            <h2>videos de galeria</h2>
+        </div>
         </div>
         <div>
             <section class="justify-content-center flex-wrap d-flex align-items-center">
@@ -187,7 +189,7 @@
                             <a class="text-white" href="./about.html">about</a>
                         </p>
                         <p>
-                            <a class="text-white" href="#">boton arrepentimiento</a>
+                            <a class="text-danger" href="#">boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
