--- a/views/product.html
+++ b/views/product.html
@@ -69,7 +69,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><strong>GIGABYTE B560 AORUS AX</strong></h5>
                                 </div>
-                                <div class="precio_container">
+                                <div class="precio_container neon">
                                     <h3>PRECIO 20000</h3>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
@@ -86,7 +86,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><STROng>Gigabyte B560 AORUS PRO AX</STROng></h5>
                                 </div>
-                                <div class="precio_container">
+                                <div class="precio_container neon">
                                     <h3>PRECIO 20000</h3>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
@@ -103,7 +103,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title"><STRong>GIGABYTE B660M AORUS PRO</STRong></h5>
                                 </div>
-                                <div class="precio_container">
+                                <div class="precio_container neon">
                                     <h3>PRECIO 20000</h3>
                                     <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                 </div>
@@ -128,7 +128,7 @@
                                         </h5>
                                         <p class="text-center card-text">
                                     </div>
-                                    <div class="precio_container">
+                                    <div class="precio_container neon">
                                         <h3>PRECIO 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
@@ -146,7 +146,7 @@
                                         <h5 class="card-title"><strong>PLACA DE VIDEO RADEON RX6600XT ASUS ROG</strong>
                                         </h5>
                                     </div>
-                                    <div class="precio_container">
+                                    <div class="precio_container neon">
                                         <h3>PRECIO 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
@@ -164,7 +164,7 @@
                                         <h5 class="card-title"><strong>PLACA DE VIDEO AMD RADEON RX570 Asrock Phantom
                                                 Gaming</strong></h5>
                                     </div>
-                                    <div class="precio_container">
+                                    <div class="precio_container neon">
                                         <h3>PRECIO 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
@@ -190,7 +190,7 @@
                                                 BROWN</strong> </h5>
                                         <div></div>
                                     </div>
-                                    <div class="precio_container">
+                                    <div class="precio_container neon">
                                         <h3>PRECIO: 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                     </div>
@@ -207,7 +207,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>AURICULARES HYPER X CLOUD 2</strong></h5>
                                     </div>
-                                    <div class="precio_container">
+                                    <div class="precio_container neon">
                                         <h3>PRECIO: 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">COMPRAR</a>
                                     </div>
@@ -224,7 +224,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title"><strong>MOUSE GAMING CORSAIR HARPOON</strong></h5>
                                     </div>
-                                    <div class="precio_container">
+                                    <div class="precio_container neon">
                                         <h3>PRECIO: 20000</h3>
                                         <a href="#" class="btn btn-primary productos__menu">Comprar</a>
                                     </div>
@@ -273,7 +273,7 @@
                             <a class="text-white" href="./about.html">about</a>
                         </p>
                         <p>
-                            <a class="text-white" href="#">boton arrepentimiento</a>
+                            <a class="text-danger" href="#">boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
