--- a/SCSS/partials/_mediaquery.scss
+++ b/SCSS/partials/_mediaquery.scss
@@ -77,31 +77,23 @@
         margin: 10px;
         list-style-type: none;
     }
-
     .neon {
-        text-align: center;
-        font-size: 7em;
-        margin-bottom: 0;
-        margin-top: 0;
-        line-height: 1;
-        text-decoration: none;
-        color: #fff;
+        color: white;
+        animation-name: glow;
+        animation-duration: 1s;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
     }
 
-    .neon:nth-child(1) {
-        font-family: Monoton;
-        animation: neon1 1.5s ease-in-out infinite alternate;
-    }
 
-    @keyframes neon1 {
+
+    @keyframes glow {
         from {
-            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de,
-                0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+            text-shadow: 0px 0px 5px #fff, 0px 0px 5px #614ad3;
         }
 
         to {
-            text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff00de,
-                0 0 35px #ff00de, 0 0 40px #ff00de, 0 0 50px #ff00de, 0 0 75px #ff00de;
+            text-shadow: 0px 0px 20px #fff, 0px 0px 20px #614ad3;
         }
     }
 
