--- a/SCSS/utilities/_normalize.scss
+++ b/SCSS/utilities/_normalize.scss
@@ -24,4 +24,7 @@ a{
     text-decoration: none;
     font-family: $font-principal;
 }
+footer{
+    background-image: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)),
+}
 
