--- a/views/about.html
+++ b/views/about.html
@@ -185,7 +185,7 @@
                             <a class="text-white" href="./about.html">about</a>
                         </p>
                         <p>
-                            <a class="text-white" href="#">boton arrepentimiento</a>
+                            <a class="text-danger" href="#">boton arrepentimiento</a>
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
